--- a/Exo5/templates/index.html
+++ b/Exo5/templates/index.html
@@ -74,12 +74,13 @@
 
             <div id="container_btn">
                  <button onclick="deleteRow()" class="btn-del">Supprimer</button>
-                 <button onclick="consoleTableau()" class="btn-del">Console Tableau</button>
+                 <button onclick="consoleTableau()" class="btn-console">Console Tableau</button>
 
             </div>
     
             
         </div>
+
      
     </body>
 
